Moved the drag/drop js code to a different, .js file.

--- a/templates/xds_bookmarks/index.html
+++ b/templates/xds_bookmarks/index.html
@@ -1,77 +1,11 @@
+{% load staticfiles %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Bookmarks Front Page</title>
-    <script>
-        function cancel(e) {
-            if (e.preventDefault) e.preventDefault(); // required by FF + Safari
-            e.dataTransfer.dropEffect = 'copy'; // tells the browser what drop effect is allowed here
-            return false; // required by IE
-        }
-
-        function entities(s) {
-            var e = {
-                '"': '"',
-                '&': '&',
-                '<': '<',
-                '>': '>'
-            };
-            return s.replace(/["&<>]/g, function (m) {
-                return e[m];
-            });
-        }
-
-        function addEvent(to, type, fn) {
-            if (document.addEventListener) {
-                to.addEventListener(type, fn, false);
-            } else if (document.attachEvent) {
-                to.attachEvent('on' + type, fn);
-            } else {
-                to['on' + type] = fn;
-            }
-        }
-
-        function main() {
-            var drop = document.querySelector('#drop');
-
-            // enable 'drop' on this target
-            addEvent(drop, 'dragover', cancel);
-            addEvent(drop, 'dragenter', cancel);
-
-            addEvent(drop, 'drop', function (e) {
-                if (e.preventDefault) e.preventDefault(); // stop browser from redirecting to text
-
-                drop.innerHTML = '<ul></ul>';
-
-                var li = document.createElement('li');
-
-                if (e.dataTransfer.types) {
-                    li.innerHTML = '<ul>';
-
-                    [].forEach.call(e.dataTransfer.types, function (type) {
-                        li.innerHTML += '<li>' + entities(e.dataTransfer.getData(type)
-                                        + ' (content-type: ' + type + ')') + '</li>';
-                    });
-                    li.innerHTML += '</ul>';
-                } else {
-                    // IE doesn't have .types property
-                    li.innerHTML = e.dataTransfer.getData('Text');
-                }
-                var ul = drop.querySelector('ul');
-
-                if (ul.firstChild) {
-                    ul.insertBefore(li, ul.firstChild);
-                } else {
-                    ul.appendChild(li);
-                }
-
-                return false;
-            });
-        }
-
-
-    </script>
+    <script type="text/javascript" src="{% static 'xds_bookmarks/js/main.js' %}"></script>
 </head>
 <body onload="main()">
 <div><p>Welcome to the bookmarks page!</p></div>
