--- a/templates/xds_bookmarks/index.html
+++ b/templates/xds_bookmarks/index.html
@@ -1,14 +1,12 @@
-{% load staticfiles %}
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <title>Bookmarks Front Page</title>
-    <script type="text/javascript" src="{% static 'xds_bookmarks/js/main.js' %}"></script>
+        <script type="text/javascript" src="{{ url_for('xds_bookmarks.static', filename='xds_bookmarks/js/main.js') }}"></script>
 </head>
-<body onload="main()">
-<div><p>Welcome to the bookmarks page!</p></div>
-<div id="drop" style="border: 1px solid black; width: 100%; height: 100%; min-height: 100px">Drop zone.</div>
-</body>
+    <body onload="main()">
+        <div><p>Welcome to the bookmarks page!</p></div>
+        <div id="drop" style="border: 1px solid black; width: 100%; height: 100%; min-height: 100px">Drop zone.</div>
+    </body>
 </html>
