--- a/templates/xds_bookmarks/index.html
+++ b/templates/xds_bookmarks/index.html
@@ -1,12 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Bookmarks Front Page</title>
-        <script type="text/javascript" src="{{ url_for('xds_bookmarks.static', filename='xds_bookmarks/js/main.js') }}"></script>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>XDS Bookmarks - Front Page</title>
+
+    <meta name="description" content="XDS Bookmarks - Front Page">
+    <meta name="author" content="Xyder">
+
+    <!-- styles -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/css/bootstrap-theme.min.css">
+    <!-- scripts -->
+    <script type="text/javascript" src="//code.jquery.com/jquery-2.2.0.min.js"></script>
+    <script type="text/javascript" src="//cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.5/socket.io.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.5/js/bootstrap.min.js"></script>
+
+    <script type="text/javascript" src="{{ url_for('xds_bookmarks.static', filename='xds_bookmarks/js/main.js') }}"></script>
 </head>
-    <body onload="main()">
-        <div><p>Welcome to the bookmarks page!</p></div>
+    <body>
         <div id="drop" style="border: 1px solid black; width: 100%; height: 100%; min-height: 100px">Drop zone.</div>
     </body>
 </html>
