--- a/templates/xds_bookmarks/index.html
+++ b/templates/xds_bookmarks/index.html
@@ -22,5 +22,14 @@
 </head>
     <body>
         <div id="drop" style="border: 1px solid black; width: 100%; height: 100%; min-height: 100px">Drop zone.</div>
+        <form id="emit" method="POST" action='#'>
+            <input type="text" name="emit_data" id="emit_data" placeholder="Message">
+            <input type="submit" value="Echo">
+        </form>
+        <form id="disconnect" method="POST" action="#">
+            <input type="submit" value="Disconnect">
+        </form>
+        <h2>Receive:</h2>
+        <div id="log"></div>
     </body>
 </html>
